11 Fixed nav bar overflow

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -72,12 +72,14 @@ footer {
 nav {
 	display: flex;
 	justify-content: space-around;
+	flex-wrap: wrap;
 }
 
 	nav a{
 		color: black;
 		text-decoration: none;
-		font-size: larger
+		font-size: larger;
+		padding: 5px;
 	}
 
 	nav a:hover {
